Fix sidebar spacing for longer text

--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ p a:hover {
 	float: left;
 	width: 290px;
 	padding-right: 18px;
+	margin-bottom: 5em;
 }
 .sidebar > div {
 	margin: 0 0 30px;
